--- a/css/style.css
+++ b/css/style.css
@@ -426,3 +426,175 @@ footer .cols .news-col form button:hover i {
   color: var(--bg-primary);
 }
 /* Start of responsive styling from here  */
+/* breakpoint width of devices considered: 1100px, 780px, 650px, 480px  */
+
+@media screen and (max-width: 1100px) {
+  .services-assurance {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .services-assurance .item {
+    flex-basis: 49%;
+  }
+
+  .skills {
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .skills .left {
+    width: 500px;
+  }
+
+  .skills .left .info h3 {
+    font-size: 22px;
+  }
+
+  .skills .left .info p {
+    font-size: 12px;
+  }
+
+  footer {
+    margin-top: 150px;
+  }
+
+  footer .start {
+    width: 90%;
+    left: 5%;
+    top: -20%;
+  }
+
+  footer .cols {
+    flex-wrap: wrap;
+  }
+
+  footer .cols .about-col {
+    flex-basis: 50%;
+  }
+
+  footer .cols .links-col {
+    flex-basis: 50%;
+  }
+
+  footer .cols .news-col {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .navbar button {
+    display: none;
+  }
+
+  .main h4 {
+    font-size: 24px;
+  }
+
+  .main p.title {
+    font-size: 36px;
+  }
+
+  .main p.subtitle {
+    font-size: 14px;
+  }
+
+  .services-assurance .item {
+    flex-basis: 100%;
+  }
+
+  .about-me {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .navbar {
+    justify-content: center;
+  }
+
+  .navbar h2 {
+    display: none;
+  }
+
+  .navbar ul li a {
+    font-size: 14px;
+  }
+
+  .main {
+    margin-top: 50px;
+    height: 320px;
+    justify-content: start;
+  }
+
+  .main h4 {
+    font-size: 20px;
+  }
+
+  .main p.title {
+    font-size: 28px;
+  }
+
+  .main p.subtitle {
+    font-size: 12px;
+  }
+
+  .main img {
+    margin-top: 40px;
+    width: 150px;
+    height: 150px;
+  }
+
+  .skills {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .skills .right {
+    justify-content: space-between;
+  }
+
+  .skills .left .info h3 {
+    font-size: 20px;
+  }
+
+  footer .start {
+    top: -8%;
+  }
+
+  footer .start {
+    display: none;
+  }
+
+  footer .cols .about-col {
+    flex-basis: 100%;
+    margin-bottom: 40px;
+  }
+
+  footer .cols .links-col {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+  }
+
+  footer .cols .news-col {
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main p.title {
+    font-size: 18px;
+  }
+
+  .main p.subtitle {
+    font-size: 10px;
+  }
+
+  .services-assurance .item .info h3 {
+    font-size: 20px;
+  }
+  .services-assurance .item .info p {
+    font-size: 12px;
+  }
+}
